--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.2",
     "sequelize": "^3.5.1",
+    "sqlite3": "^3.1.1",
     "underscore": "^1.8.3"
   }
 }
